Changelog
=========

1.0.3 (unreleased)
------------------

- Check to see if tinymce ajax is already patched or not.
  This prevents JavaScript recursion error.
  [awello, cekk]


1.0.2 (2015-10-06)
------------------

- use a better guess at if we should rewrite urls
  for zmi
  [vangheem]


1.0.1 (2015-10-06)
------------------

- correctly check for origin header
  [vangheem]

1.0.0 (2015-10-06)
------------------

- initial release